tests/ui/g-loop-continue-wrong-control-kind.stderr
error[E0080]: evaluation panicked: local control messages require self-send
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `hibana::g::send::<0, 1, hibana::g::Msg<161, (), hibana::integration::cap::control::LoopContinueKind>, 0>::{constant#0}` failed here
  |
 ::: src/g.rs
  |
  |                     panic!("local control messages require self-send")
  |                     -------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  | /     const {
  | |         if FROM >= crate::global::ROLE_DOMAIN_SIZE as u8 {
  | |             panic!("role index must be < 16");
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<0, 1, Msg<161, (), LoopContinueKind>, 0>`
  --> tests/ui/g-loop-continue-wrong-control-kind.rs:7:13
   |
 7 |       let _ = g::send::<
   |  _____________^
 8 | |         0,
 9 | |         1,
10 | |         g::Msg<
...  |
15 | |         0,
16 | |     >();
   | |_______^
